# tinyows

./: .gitignore  Doxyfile  LICENSE  LICENSE.md  Makefile.in  Makefile.vc  NEWS  NEWS.md  README  README.md  VERSION  autogen.sh  configure.in  nmake.opt  tinyows-svn-2005.vcproj
.github/workflows/: check-crlf.yml  irc_notify.yml  linux.sh  linux.yml
0.8.0/: LICENSE  configure.in
0.8.0/src/fe/: fe_function.c
0.8.0/src/ows/: ows_bbox.c  ows_geobbox.c  ows_layer.c
0.8.0/src/struct/: alist.c
0.8.0/src/wfs/: wfs_get_feature.c  wfs_transaction.c
0.8.0/src/wms/: wms_get_capabilities.c
0.8.0/test/: install.sh.in  ogc_wfs_data_100.sql
0.8.0/test/wfs/cite_wfs_1_1_0-sf0/: 0001  0011  0013  0021  0033  0034  0044  0047  0050  0052  0053  0056  0059  0076  0080  0082  0083  0087  0091  0096  0099  0100  0101  0102  0112  0117  0119  0121  0122  0123  0132  0137  0153  0154  0156  0161  0164  0165  0167  0175  (+26 more)
0.9.0/: Makefile.in  NEWS  configure.in
0.9.0/src/: ows_define.h.in
0.9.0/src/fe/: fe_filter.c  fe_logical_ops.c
0.9.0/src/ows/: ows.h  ows_config.c  ows_error.c  ows_psql.c  ows_request.c  ows_srs.c
0.9.0/src/struct/: cgi_request.c
0.9.0/src/wfs/: wfs_describe.c  wfs_transaction.c
0.9.0/src/wms/: wms_get_map.c
0.9.0/test/: unit_test
0.9.0/test/wfs/cite_wfs_1_1_0-sf0/: 0003  0024  0026  0032  0041  0051  0054  0058  0070  0089  0098  0104  0107  0111  0124  0131  0138  0143  0152  0159  0169  0170  0172  0179  0180  0206  0207  0211  0212  0213  0227  0234  0237  0241  0243  0244
demo/: check.sh  config.xml.in  install.sh.in  tinyows.xml.in  tinyows_no_checkschema.xml
demo/tests/expected/: wfs10_describe.txt  wfs10_getcaps.txt  wfs10_getfeatures_france_bbox.txt  wfs10_getfeatures_france_onefeature.txt  wfs10_getfeatures_geometry_less.txt  wfs10_getfeatures_world_onefeature.txt  wfs11_describe.txt  wfs11_getcaps.txt  wfs11_getfeatures_france_bboxwithcrsuri.txt  wfs11_getfeatures_france_bboxwithcrsuri_srsname.txt  wfs11_getfeatures_france_onefeature.txt  wfs11_getfeatures_geometry_less.txt  wfs11_getfeatures_world_onefeature.txt
demo/tests/input/: wfs10_describe.txt  wfs10_getcaps.txt  wfs10_getfeatures_france_bbox.txt  wfs10_getfeatures_france_onefeature.txt  wfs10_getfeatures_geometry_less.txt  wfs10_getfeatures_world_onefeature.txt  wfs11_describe.txt  wfs11_getcaps.txt  wfs11_getfeatures_france_bboxwithcrsuri.txt  wfs11_getfeatures_france_bboxwithcrsuri_srsname.txt  wfs11_getfeatures_france_bboxwithoutcrsuri.txt  wfs11_getfeatures_france_onefeature.txt  wfs11_getfeatures_geometry_less.txt  wfs11_getfeatures_world_onefeature.txt
demo/tests/transactions/input/: wfst10_france_insert.xml  wfst10_world_insert.xml  wfst11_france_insert.xml  wfst11_geometry_less_insert.xml  wfst11_world_insert.xml  wfst11_world_insert_srsname_in_wfsinsert.xml
doc/: Doxyfile
ms4w/apps/tinyows-svn/: config.xml  install.bat
schema/tows/: config.xsd
schema/wfs/1.1.0/: wfs.xsd
src/: ows_api.h  ows_define.h.in  ows_struct.h
src/fe/: fe_comparison_ops.c  fe_error.c  fe_filter.c  fe_filter_capabilities.c  fe_function.c  fe_logical_ops.c  fe_spatial_ops.c
src/mapfile/: mapfile.c  mapfile.l
src/ows/: ows.c  ows.h  ows_bbox.c  ows_config.c  ows_error.c  ows_geobbox.c  ows_get_capabilities.c  ows_layer.c  ows_libxml.c  ows_metadata.c  ows_psql.c  ows_request.c  ows_srs.c  ows_storage.c  ows_version.c
src/sld/: sld_parser.c
src/struct/: alist.c  array.c  buffer.c  cgi_request.c  list.c  mlist.c  regexp.c
src/wfs/: wfs_describe.c  wfs_error.c  wfs_get_capabilities.c  wfs_get_feature.c  wfs_request.c  wfs_transaction.c
src/wms/: wms_error.c  wms_get_capabilities.c  wms_get_map.c  wms_request.c
tags/src/ows/: ows_psql.c  ows_storage.c
tags/test/: README
tags/test/wfs/cite_wfs_1_1_0-sf0/: 0027  0028  0029  0037  0039  0043  0081  0090  0092  0094  0095  0097  0113  0118  0133  0142  0145  0146  0181  0194  0195  0196  0198  0214  0218  0235  (+3 more)
test/: README  config.xml  config.xml.in  config_wfs_110.xml.in  install.sh.in  ogc_test_config.xml  ogc_wfs_data.sql  ogc_wfs_data_100.sql  ogc_wfs_data_110.sql  ogc_wfs_struct_100_sf0.sql  unit_test
test/regress/: config.xml.in
test/regress/lonlat/: 110A01.out  110A02.out  110A03.out  110A04.out  110A06.out  110B03.out  110B05.out  110B08.out  110B09.out  110B22.out  110B24.out  110B26.out  110B48.out  110C01.out  110C02.out  110C04.out  110C12.out  110C13.out  110C14.out  110C21.out  110C23.out  110D01.out  110D02.out  110D03.out  110D04.out  110D07.out  110D21.out  110D23.out  110D26.out  110D27.out  110D28.out  110D29.out  110D31.out  110D32.out
test/wfs/cite_wfs_1_1_0-sf0/: 0016  0022  0030  0035  0040  0042  0045  0060  0063  0065  0068  0069  0071  0073  0078  0084  0085  0108  0109  0110  0114  0116  0120  0127  0129  0130  0134  0140  0141  0144  0148  0149  0150  0155  0162  0171  0173  0174  0177  0178  (+23 more)
test/wfs/describe/: 2001  2002  2003  2004  2005  2007  2008  2009  2010  2011
test/wfs/get_capabilities/: 1001  1003
test/wfs/get_feature/: 3001  3002  3003  3004  3005  3006  3007  3008  3010  3011  3012  3013  3014  3015  3016  3017  3018  3019  3020  3021  3022  3023  3024  3025  3026  3027  3028  3029  3030  3031  3032  3033  3034  3035  3036  3037  3038  3039  3040  3041  (+184 more)
test/wfs/get_feature_with_lock/: 6001  6002  6003  6004  6005  6006
test/wfs/lock_feature/: 5001  5002  5003  5004  5005  5006  5007  5008  5009  5010
test/wfs/transaction/: 4001  4002  4003  4004  4005  4006  4007  4008  4009  4010  4011  4012  4013  4014  4015  4016  4017  4018  4019  4020
test/wfs_100/: config_wfs_100.xml.in  install_wfs_100.sh.in  ogc_wfs_dataset_100_sf0.xml  ogc_wfs_sf0.sql  ogc_wfs_struct_100_sf0.sql
test/wfs_110/: config_wfs_110.xml.in  install_wfs_110.sh.in  ogc_wfs_dataset_110_sf0.xml  ogc_wfs_sf0.sql  ogc_wfs_struct_110_sf0.sql
wfs/cite_wfs_1_1_0-sf0/: 0017  0023  0025  0036  0061  0062  0066  0067  0072  0077  0088  0093  0103  0106  0115  0125  0126  0128  0135  0136  0139  0147  0151  0157  0158  0160  0163  0166  0168  0176  0185  0186  0187  0190  0191  0208  0209  0222  0223  0229  (+7 more)
(+61 files in other folders)
