AC_INIT()

dnl ---------------------------------------------------------------------
dnl Look for libxml2
dnl ---------------------------------------------------------------------

AC_ARG_WITH(xml2-config,
[  --with-xml2-config=PATH Specify path to xml2-config.],,)

if test "$with_xml2_config" = "no" ; then
  AC_MSG_ERROR([LibXML2 support is a need to TinyOWS !])
fi

if test "`basename xx/$with_xml2_config`" = "xml2-config" ; then
  LIBXML2_CONFIG="$with_xml2_config"
  if ! test -f "$LIBXML2_CONFIG" -a -x "$LIBXML2_CONFIG" ; then
    AC_MSG_ERROR(['$LIBXML2_CONFIG' is not an executable.  Make sure you use --with-xml2-config=/path/to/xml2-config])
  fi
else
  AC_PATH_PROG(LIBXML2_CONFIG, xml2-config, no)
fi

if test "$LIBXML2_CONFIG" = "no" ; then
 AC_MSG_ERROR([couldn't find xml2-config, try using --with-xml2-config=PATH])
fi

XML2_VER=`$LIBXML2_CONFIG --version`
AC_MSG_RESULT([checking for libxml2 version... $XML2_VER])

xml2_vers=`$LIBXML2_CONFIG --version | awk 'BEGIN { FS = "."; } { printf "%d", ($1 * 1000 + $2) * 1000 + $3;}'`
if test "$xml2_vers" -lt 2006020 ; then
	AC_MSG_ERROR([You need at least libxml 2.6.20])
fi



XML2_INC=`$LIBXML2_CONFIG --cflags`
XML2_LIB=`$LIBXML2_CONFIG --libs`

AC_SUBST(XML2_INC)
AC_SUBST(XML2_LIB)

dnl ---------------------------------------------------------------------------
dnl PostgreSQL / PostGIS support
dnl ---------------------------------------------------------------------------

AC_ARG_WITH(postgis,[  --with-postgis[[=ARG]]    Include PostGIS Support (ARG=yes/path to pg_config)],,)

if test "$with_postgis" = "no" ; then
  AC_MSG_ERROR([PostGIS support is a need to TinyOWS !])
elif test "$with_postgis" = "yes" -o "$with_postgis" = "" ; then
  AC_PATH_PROG(PG_CONFIG, pg_config, no)
else
  AC_MSG_RESULT(yes)
  PG_CONFIG=$with_postgis
fi

if ! test -f "$PG_CONFIG" -a -x "$PG_CONFIG" ; then
  AC_MSG_ERROR(['$PG_CONFIG' is not an executable.  Make sure you use --with-postgis=/path/to/pg_config])
fi

PG_VER=`$PG_CONFIG --version`
AC_MSG_RESULT([checking for PostgreSQL version... $PG_VER])

pg_vers=`$PG_CONFIG --version | sed 's/PostgreSQL //' | awk 'BEGIN { FS = "."; } { printf "%d", ($1 * 1000 + $2) * 1000 + $3;}'`
if test "$pg_vers" -lt 8001000 ; then
	AC_MSG_ERROR([You need at least PostgreSQL 8.1.0])
fi


POSTGIS_LIB="-L`$PG_CONFIG --libdir` -lpq"
POSTGIS_INC="-I`$PG_CONFIG --includedir`"
POSTGIS_SHARE=`$PG_CONFIG --sharedir`
POSTGIS_BIN=`$PG_CONFIG --bindir`

AC_SUBST(POSTGIS_INC)
AC_SUBST(POSTGIS_LIB)
AC_SUBST(POSTGIS_SHARE)
AC_SUBST(POSTGIS_BIN)

AC_CHECK_FUNCS()
AC_OUTPUT(Makefile src/ows_define.h demo/config.xml demo/install.sh test/config.xml test/install.sh)

rm -rf autom4te.cache
rm -f config.log config.status

echo "------------------------"
echo "This TinyOWS version will need at least PostGIS 1.4.x"
echo "------------------------"
